# yambot

./: README.md  frames_2024-10-09_18.18.21.gv
src/yambot/: CMakeLists.txt  package.xml
src/yambot/config/: joy-params.yaml  mapper_params_online_async.yaml
src/yambot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/yambot/install/yambot/share/yambot/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/yambot/install/yambot/share/yambot/launch/: gazebo_model.launch.py
src/yambot/install/yambot/share/yambot/urdf/: mobile_robot.gazebo  mobile_robot.xacro  my_robot.urdf  test_robot.xacro
src/yambot/launch/: mobile_model.launch.py  spawn_robot.launch.py
src/yambot/log/: latest_build
src/yambot/urdf/: empty_world.world  lidar.gazebo  lidar.xacro  materials.xacro  mobile_robot.gazebo  mobile_robot.xacro  robot.urdf.xacro  robot_core.xacro  test_robot.gazebo  test_robot.xacro
