<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yambot</name>
  <version>0.0.1</version>
  <description>yambot package</description>
  <maintainer email="janviseth@hotmail.com">janvi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
    <launchfile>launch/spawn_robot.launch.py</launchfile>
  </export>
  
</package>
