<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yambot</name>
  <version>0.0.1</version>
  <description>Yambot package</description>
  <maintainer email="janviseth@hotmail.com">Janvi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <build_depend>tf2</build_depend>               <!-- Added for TF -->
  <build_depend>tf2_ros</build_depend>           <!-- Added for TF -->
  <build_depend>tf2_geometry_msgs</build_depend> <!-- Added for TF -->
  
  <depend>teleop_twist_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>tf2</exec_depend>               <!-- Added for TF -->
  <exec_depend>tf2_ros</exec_depend>           <!-- Added for TF -->
  <exec_depend>tf2_geometry_msgs</exec_depend> <!-- Added for TF -->

  <export>
    <build_type>ament_cmake</build_type>
    <launchfile>launch/spawn_robot.launch.py</launchfile>
  </export>
  
</package>

